--- a/main.html
+++ b/main.html
@@ -17,9 +17,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
+       
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
@@ -58,7 +56,7 @@
 			 </li>
 		   <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Tech-Fieds
+            Tech-Fields
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Action</a></li>
@@ -67,9 +65,10 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
 		   </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+		   <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">News & Commentary</a>
         </li>
+       
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
